--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@angular/material": "^7.2.0",
     "@angular/platform-browser": "^7.1.4",
     "@angular/platform-browser-dynamic": "^7.1.4",
+    "@angular/platform-server": "^7.1.4",
     "@angular/router": "^7.1.4",
     "bcrypt": "^3.0.3",
     "body-parser": "^1.18.3",
@@ -34,27 +35,33 @@
     "morgan": "^1.9.1",
     "ngx-cookie": "^4.1.2",
     "rxjs": "^6.3.3",
+    "rxjs-compat": "^6.3.3",
+    "tslib": "^1.9.0",
     "zone.js": "^0.8.26"
   },
   "devDependencies": {
+    "@angular-devkit/build-angular": "^0.11.4",
     "@angular/cli": "^7.1.4",
     "@angular/compiler-cli": "^7.1.4",
     "@angular/language-service": "^7.1.4",
-    "@types/jasmine": "~3.3.5",
+    "@nguniversal/express-engine": "^7.0.2",
+    "@types/jasmine": "^3.3.5",
     "@types/jasminewd2": "~2.0.6",
     "@types/node": "^10.12.18",
-    "codelyzer": "~4.5.0",
-    "jasmine-core": "~3.3.0",
-    "jasmine-spec-reporter": "~4.2.1",
+    "codelyzer": "^4.5.0",
+    "jasmine-core": "^3.3.0",
+    "jasmine-spec-reporter": "^4.2.1",
     "karma": "^3.1.4",
-    "karma-chrome-launcher": "~2.2.0",
-    "karma-cli": "~2.0.0",
+    "karma-chrome-launcher": "^2.2.0",
+    "karma-cli": "^2.0.0",
     "karma-coverage-istanbul-reporter": "^2.0.4",
-    "karma-jasmine": "~2.0.1",
+    "karma-jasmine": "^2.0.1",
     "karma-jasmine-html-reporter": "^1.4.0",
     "protractor": "^5.4.2",
+    "rxjs-tslint": "^0.1.6",
     "ts-node": "~7.0.1",
-    "tslint": "~5.12.0",
-    "typescript": "~3.2.2"
+    "tslint": "^5.12.0",
+    "typescript": "^3.1.1",
+    "webpack": "^4.28.3"
   }
 }
